--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="sv">
 <head>
 <title>Page Title</title>
+<meta charset="UTF-8">
 </head>
 <body>
-<header><img src="cover-image.jpg" /></header>
+<header><img src="cover-image.jpg" alt="Cover image for Jurassic World: Dominion"/></header>
 <h1>Aktuell film just nu - Jurassic World: Dominion</h1>
 <p style="width: 400px">
 Fyra år efter att Isla Nublar förstörts lever och jagar nu dinosaurier i människors närhet över hela världen. Denna bräckliga balans kommer att omforma framtiden och avgöra, en gång för alla, om människor kommer att förbli de främsta rovdjuren på den planet som de nu delar med historiens mest skrämmande varelser.
@@ -30,7 +31,7 @@ Engelska
 9 jun 2022
 </p>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/fb5ELWi-ekk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/fb5ELWi-ekk" title="YouTube video player" style="border: 0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <p>
 <a href="https://www.jurassicworld.com/">Official Site</a><br/>
 <a href="https://www.imdb.com/title/tt8041270/">IMDb</a>
